--- a/mits store/Mini-Project/templates/r1.html
+++ b/mits store/Mini-Project/templates/r1.html
@@ -71,7 +71,7 @@
       <label><b>Print Size</b></label>
       <select name="email">
         <option value="A4">A4</option>
-        <option value="Legal">Legal</option>
+        <option value="Legal">A3</option>
       </select>
 
       <!-- Dropdown for Print Option -->
